--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,9 @@
 {
   "name": "Atticus",
   "tree": {
-    "$path" : "src"
+    "$path" : "src",
+    "Packages" : {
+      "$path" : "Packages"
+    }
   }
 }
